--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -70,8 +70,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)ThirdParty\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)ThirdParty\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)ThirdParty\include\;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ThirdParty\lib\;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)libBUILD</OutDir>
     <IntDir>$(SolutionDir)libBUILD\intermediate</IntDir>
   </PropertyGroup>
@@ -133,6 +133,9 @@
     <ClInclude Include="FireLight.h" />
     <ClInclude Include="GL\gl3w.h" />
     <ClInclude Include="GL\glcorearb.h" />
+    <ClInclude Include="src\Scene.h" />
+    <ClInclude Include="src\SceneManager.h" />
+    <ClInclude Include="src\SceneNode.h" />
     <ClInclude Include="src\SimpleRenderSystem.h" />
     <ClInclude Include="src\App.h" />
     <ClInclude Include="src\Camera.h" />
@@ -140,9 +143,13 @@
     <ClInclude Include="src\Utility\ResourceManager.h" />
     <ClInclude Include="src\Utility\Resources\Shader.h" />
     <ClInclude Include="src\Window.h" />
+    <ClInclude Include="src\Utility\Resources\Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GL\gl3w.c" />
+    <ClCompile Include="src\Scene.cpp" />
+    <ClCompile Include="src\SceneManager.cpp" />
+    <ClCompile Include="src\SceneNode.cpp" />
     <ClCompile Include="src\SimpleRenderSystem.cpp" />
     <ClCompile Include="src\App.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -150,6 +157,7 @@
     <ClCompile Include="src\Utility\ResourceManager.cpp" />
     <ClCompile Include="src\Utility\Resources\Shader.cpp" />
     <ClCompile Include="src\Window.cpp" />
+    <ClCompile Include="src\Utility\Resources\Texture.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
