--- a/Test/imgui.ini
+++ b/Test/imgui.ini
@@ -9,7 +9,12 @@ Size=166,61
 Collapsed=0
 
 [Slime Class]
-Pos=60,60
+Pos=56,31
+Size=274,48
+Collapsed=0
+
+[TestScene]
+Pos=444,21
 Size=274,48
 Collapsed=0
 
