Scambio di informazioni fra classi (DataCenter)
creato il DataCenter, versione di FireLight Engine di PlayerPrefs di Unity. Questo permette di inserire e prendere informazioni dentro un contenitore. Quindi invece di avere A includo in B e B incluso in A, ora A e B includono DataCenter e ognino ci butta e si prende informazioni da questo

--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -119,6 +119,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataCenter.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -127,6 +128,7 @@
     <ClCompile Include="TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataCenter.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="RunnerEnemy.h" />
