--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -137,26 +137,22 @@
     <ClInclude Include="imgui\stb_rect_pack.h" />
     <ClInclude Include="imgui\stb_textedit.h" />
     <ClInclude Include="imgui\stb_truetype.h" />
-    <ClInclude Include="src\Animation.h" />
-    <ClInclude Include="src\components\Animator.h" />
-    <ClInclude Include="src\Component.h" />
-    <ClInclude Include="src\components\Sprite.h" />
     <ClInclude Include="src\Debug.h" />
     <ClInclude Include="FireLight.h" />
     <ClInclude Include="GL\gl3w.h" />
     <ClInclude Include="GL\glcorearb.h" />
-    <ClInclude Include="src\Scene.h" />
-    <ClInclude Include="src\SceneManager.h" />
-    <ClInclude Include="src\SceneNode.h" />
+    <ClInclude Include="src\Core\Scene.h" />
+    <ClInclude Include="src\Core\SceneManager.h" />
+    <ClInclude Include="src\Core\SceneNode.h" />
     <ClInclude Include="src\SimpleRenderSystem.h" />
-    <ClInclude Include="src\App.h" />
+    <ClInclude Include="src\Core\App.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Renderable.h" />
+    <ClInclude Include="src\Core\Time.h" />
     <ClInclude Include="src\Utility\ResourceManager.h" />
     <ClInclude Include="src\Utility\Resources\Shader.h" />
-    <ClInclude Include="src\Window.h" />
+    <ClInclude Include="src\Core\Window.h" />
     <ClInclude Include="src\Utility\Resources\Texture.h" />
-    <ClInclude Include="src\components\TileMap.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\extra_fonts\binary_to_compressed_c.cpp" />
@@ -164,24 +160,20 @@
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp" />
-    <ClCompile Include="src\Animation.cpp" />
-    <ClCompile Include="src\components\Animator.cpp" />
-    <ClCompile Include="src\Component.cpp" />
-    <ClCompile Include="src\components\Sprite.cpp" />
     <ClCompile Include="src\Debug.cpp" />
     <ClCompile Include="GL\gl3w.c" />
-    <ClCompile Include="src\Scene.cpp" />
-    <ClCompile Include="src\SceneManager.cpp" />
-    <ClCompile Include="src\SceneNode.cpp" />
+    <ClCompile Include="src\Core\Scene.cpp" />
+    <ClCompile Include="src\Core\SceneManager.cpp" />
+    <ClCompile Include="src\Core\SceneNode.cpp" />
     <ClCompile Include="src\SimpleRenderSystem.cpp" />
-    <ClCompile Include="src\App.cpp" />
+    <ClCompile Include="src\Core\App.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Renderable.cpp" />
+    <ClCompile Include="src\Core\Time.cpp" />
     <ClCompile Include="src\Utility\ResourceManager.cpp" />
     <ClCompile Include="src\Utility\Resources\Shader.cpp" />
-    <ClCompile Include="src\Window.cpp" />
+    <ClCompile Include="src\Core\Window.cpp" />
     <ClCompile Include="src\Utility\Resources\Texture.cpp" />
-    <ClCompile Include="src\components\TileMap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
