--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -130,6 +130,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Render\Cube.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw_gl3.h" />
@@ -137,47 +138,51 @@
     <ClInclude Include="imgui\stb_rect_pack.h" />
     <ClInclude Include="imgui\stb_textedit.h" />
     <ClInclude Include="imgui\stb_truetype.h" />
-    <ClInclude Include="src\Render\Mesh.h" />
-    <ClInclude Include="src\Debug.h" />
+    <ClInclude Include="src\Render\OpenGL\IndexBuffer.h" />
+    <ClInclude Include="src\Utility\Debug.h" />
     <ClInclude Include="FireLight.h" />
     <ClInclude Include="GL\gl3w.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="src\Core\Scene.h" />
     <ClInclude Include="src\Core\SceneManager.h" />
     <ClInclude Include="src\Core\SceneNode.h" />
-    <ClInclude Include="src\SimpleRenderSystem.h" />
+    <ClInclude Include="src\Render\OpenGL\GLUtility.h" />
+    <ClInclude Include="src\Render\SimpleRenderSystem.h" />
     <ClInclude Include="src\Core\App.h" />
-    <ClInclude Include="src\Camera.h" />
-    <ClInclude Include="src\Renderable.h" />
+    <ClInclude Include="src\Render\Camera.h" />
+    <ClInclude Include="src\Render\Renderable.h" />
     <ClInclude Include="src\Core\Time.h" />
     <ClInclude Include="src\Utility\ResourceManager.h" />
     <ClInclude Include="src\Utility\Resources\Shader.h" />
     <ClInclude Include="src\Core\Window.h" />
     <ClInclude Include="src\Utility\Resources\Texture.h" />
     <ClInclude Include="src\Render\OpenGL\VertexBuffer.h" />
+    <ClInclude Include="src\Render\OpenGL\VertexArrayBuffer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Render\Cube.cpp" />
     <ClCompile Include="imgui\extra_fonts\binary_to_compressed_c.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp" />
-    <ClCompile Include="src\Render\Mesh.cpp" />
-    <ClCompile Include="src\Debug.cpp" />
+    <ClCompile Include="src\Render\OpenGL\IndexBuffer.cpp" />
+    <ClCompile Include="src\Utility\Debug.cpp" />
     <ClCompile Include="GL\gl3w.c" />
     <ClCompile Include="src\Core\Scene.cpp" />
     <ClCompile Include="src\Core\SceneManager.cpp" />
     <ClCompile Include="src\Core\SceneNode.cpp" />
-    <ClCompile Include="src\SimpleRenderSystem.cpp" />
+    <ClCompile Include="src\Render\SimpleRenderSystem.cpp" />
     <ClCompile Include="src\Core\App.cpp" />
-    <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\Renderable.cpp" />
+    <ClCompile Include="src\Render\Camera.cpp" />
+    <ClCompile Include="src\Render\Renderable.cpp" />
     <ClCompile Include="src\Core\Time.cpp" />
     <ClCompile Include="src\Utility\ResourceManager.cpp" />
     <ClCompile Include="src\Utility\Resources\Shader.cpp" />
     <ClCompile Include="src\Core\Window.cpp" />
     <ClCompile Include="src\Utility\Resources\Texture.cpp" />
     <ClCompile Include="src\Render\OpenGL\VertexBuffer.cpp" />
+    <ClCompile Include="src\Render\OpenGL\VertexArrayBuffer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
