--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -154,7 +154,7 @@
     <ClInclude Include="src\Render\Camera.h" />
     <ClInclude Include="src\Render\Renderable.h" />
     <ClInclude Include="src\Core\Time.h" />
-    <ClInclude Include="src\Utility\ResourceManager.h" />
+    <ClInclude Include="src\Utility\Resource.h" />
     <ClInclude Include="src\Utility\Resources\Shader.h" />
     <ClInclude Include="src\Core\Window.h" />
     <ClInclude Include="src\Utility\Resources\Texture.h" />
@@ -181,7 +181,7 @@
     <ClCompile Include="src\Render\Camera.cpp" />
     <ClCompile Include="src\Render\Renderable.cpp" />
     <ClCompile Include="src\Core\Time.cpp" />
-    <ClCompile Include="src\Utility\ResourceManager.cpp" />
+    <ClCompile Include="src\Utility\Resource.cpp" />
     <ClCompile Include="src\Utility\Resources\Shader.cpp" />
     <ClCompile Include="src\Core\Window.cpp" />
     <ClCompile Include="src\Utility\Resources\Texture.cpp" />
