--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -131,7 +131,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Core\ECS\Component.h" />
-    <ClInclude Include="src\Core\ECS\Entity.h" />
     <ClInclude Include="src\Render\Camera2D.h" />
     <ClInclude Include="src\Render\Sprite.h" />
     <ClInclude Include="src\Render\Cube.h" />
@@ -162,11 +161,10 @@
     <ClInclude Include="src\Utility\Resources\Texture.h" />
     <ClInclude Include="src\Render\OpenGL\VertexBuffer.h" />
     <ClInclude Include="src\Render\OpenGL\VertexArrayBuffer.h" />
-    <ClInclude Include="src\Core\ECS\System.h" />
+    <ClInclude Include="src\Core\ECS\World.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\ECS\Component.cpp" />
-    <ClCompile Include="src\Core\ECS\Entity.cpp" />
     <ClCompile Include="src\Render\Camera2D.cpp" />
     <ClCompile Include="src\Render\Sprite.cpp" />
     <ClCompile Include="src\Render\Cube.cpp" />
@@ -192,7 +190,7 @@
     <ClCompile Include="src\Utility\Resources\Texture.cpp" />
     <ClCompile Include="src\Render\OpenGL\VertexBuffer.cpp" />
     <ClCompile Include="src\Render\OpenGL\VertexArrayBuffer.cpp" />
-    <ClCompile Include="src\Core\ECS\System.cpp" />
+    <ClCompile Include="src\Core\ECS\World.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
