--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -131,8 +131,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Core\ECS\Component.h" />
-    <ClInclude Include="src\Render\Camera2D.h" />
-    <ClInclude Include="src\Render\Sprite.h" />
+    <ClInclude Include="src\Core\ECS\Components\Camera2D.h" />
+    <ClInclude Include="src\Core\ECS\Components\Sprite.h" />
     <ClInclude Include="src\Render\Cube.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
@@ -162,11 +162,10 @@
     <ClInclude Include="src\Render\OpenGL\VertexBuffer.h" />
     <ClInclude Include="src\Render\OpenGL\VertexArrayBuffer.h" />
     <ClInclude Include="src\Core\ECS\World.h" />
+    <ClInclude Include="src\Core\ECS\Components\Transfrom.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\ECS\Component.cpp" />
-    <ClCompile Include="src\Render\Camera2D.cpp" />
-    <ClCompile Include="src\Render\Sprite.cpp" />
     <ClCompile Include="src\Render\Cube.cpp" />
     <ClCompile Include="imgui\extra_fonts\binary_to_compressed_c.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
