--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="src\Core\ECS\Components\Camera2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Core\ECS\Components\MeshRender.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GL\gl3w.c">
