--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,6 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
-
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -122,7 +121,8 @@ artifacts/
 *.tlh
 *.tmp
 *.tmp_proj
-*.log
+*.
+*.tlog
 *.vspscc
 *.vssscc
 .builds
