--- a/Test/imgui.ini
+++ b/Test/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=309,72
+Pos=550,66
 Size=380,412
+Collapsed=0
+
+[Window][Test]
+Pos=67,62
+Size=488,289
 Collapsed=0
 
