--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Scenes\Test_Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Scenes\TestSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\Test_Scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes\TestSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
