--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -115,13 +115,13 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
+      <FloatingPointModel>Fast</FloatingPointModel>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -129,7 +129,7 @@
     </Link>
     <Lib>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>glfw3s.lib;opengl32.lib;SOILs.lib;Box2Ds.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3s.lib;opengl32.lib;SOILs.lib;Box2Ds.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -143,13 +143,15 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="imgui\misc\freetype\imgui_freetype.h" />
     <ClInclude Include="imgui\misc\stl\imgui_stl.h" />
-    <ClInclude Include="src\Core\ECS\Components\PhysicsBody.h" />
     <ClInclude Include="src\Core\ECS\Component.h" />
     <ClInclude Include="src\Core\ECS\Components\Camera2D.h" />
-    <ClInclude Include="src\Core\ECS\Components\MeshRender.h" />
     <ClInclude Include="src\Core\ECS\Components\Sprite.h" />
+    <ClInclude Include="src\Core\ECS\Components\Transform.h" />
+    <ClInclude Include="src\Core\ECS\Entity.h" />
+    <ClInclude Include="src\Core\ECS\System.h" />
+    <ClInclude Include="src\Core\ECS\Systems\Camera2DSystem.h" />
+    <ClInclude Include="src\Core\ECS\Systems\SpriteRenderSystem.h" />
     <ClInclude Include="src\Render\OpenGL\IndexBuffer.h" />
-    <ClInclude Include="src\Utility\Debug.h" />
     <ClInclude Include="FireLight.h" />
     <ClInclude Include="GL\gl3w.h" />
     <ClInclude Include="GL\glcorearb.h" />
@@ -157,10 +159,10 @@
     <ClInclude Include="src\Core\SceneManager.h" />
     <ClInclude Include="src\Core\SceneNode.h" />
     <ClInclude Include="src\Render\OpenGL\GLUtility.h" />
-    <ClInclude Include="src\Render\SimpleRenderSystem.h" />
     <ClInclude Include="src\Core\App.h" />
     <ClInclude Include="src\Render\Camera.h" />
     <ClInclude Include="src\Core\Time.h" />
+    <ClInclude Include="src\Render\RenderSystem.h" />
     <ClInclude Include="src\Utility\RandomNumber.h" />
     <ClInclude Include="src\Utility\Resource.h" />
     <ClInclude Include="src\Utility\Resources\Shader.h" />
@@ -169,8 +171,6 @@
     <ClInclude Include="src\Render\OpenGL\VertexBuffer.h" />
     <ClInclude Include="src\Render\OpenGL\VertexArrayBuffer.h" />
     <ClInclude Include="src\Core\ECS\World.h" />
-    <ClInclude Include="src\Core\ECS\Components\Transfrom.h" />
-    <ClInclude Include="src\Core\ECS\System.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp" />
@@ -183,16 +183,19 @@
     <ClCompile Include="imgui\misc\freetype\imgui_freetype.cpp" />
     <ClCompile Include="imgui\misc\stl\imgui_stl.cpp" />
     <ClCompile Include="src\Core\ECS\Component.cpp" />
+    <ClCompile Include="src\Core\ECS\Entity.cpp" />
+    <ClCompile Include="src\Core\ECS\System.cpp" />
+    <ClCompile Include="src\Core\ECS\Systems\Camera2DSystem.cpp" />
+    <ClCompile Include="src\Core\ECS\Systems\SpriteRenderSystem.cpp" />
     <ClCompile Include="src\Render\OpenGL\IndexBuffer.cpp" />
-    <ClCompile Include="src\Utility\Debug.cpp" />
     <ClCompile Include="GL\gl3w.c" />
     <ClCompile Include="src\Core\Scene.cpp" />
     <ClCompile Include="src\Core\SceneManager.cpp" />
     <ClCompile Include="src\Core\SceneNode.cpp" />
-    <ClCompile Include="src\Render\SimpleRenderSystem.cpp" />
     <ClCompile Include="src\Core\App.cpp" />
     <ClCompile Include="src\Render\Camera.cpp" />
     <ClCompile Include="src\Core\Time.cpp" />
+    <ClCompile Include="src\Render\RenderSystem.cpp" />
     <ClCompile Include="src\Utility\RandomNumber.cpp" />
     <ClCompile Include="src\Utility\Resource.cpp" />
     <ClCompile Include="src\Utility\Resources\Shader.cpp" />
@@ -201,7 +204,6 @@
     <ClCompile Include="src\Render\OpenGL\VertexBuffer.cpp" />
     <ClCompile Include="src\Render\OpenGL\VertexArrayBuffer.cpp" />
     <ClCompile Include="src\Core\ECS\World.cpp" />
-    <ClCompile Include="src\Core\ECS\System.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
