--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -10,14 +10,11 @@
     <ClCompile Include="imgui\misc\fonts\binary_to_compressed_c.cpp" />
     <ClCompile Include="imgui\misc\freetype\imgui_freetype.cpp" />
     <ClCompile Include="imgui\misc\stl\imgui_stl.cpp" />
-    <ClCompile Include="src\Core\ECS\Component.cpp" />
     <ClCompile Include="src\Render\OpenGL\IndexBuffer.cpp" />
-    <ClCompile Include="src\Utility\Debug.cpp" />
     <ClCompile Include="GL\gl3w.c" />
     <ClCompile Include="src\Core\Scene.cpp" />
     <ClCompile Include="src\Core\SceneManager.cpp" />
     <ClCompile Include="src\Core\SceneNode.cpp" />
-    <ClCompile Include="src\Render\SimpleRenderSystem.cpp" />
     <ClCompile Include="src\Core\App.cpp" />
     <ClCompile Include="src\Render\Camera.cpp" />
     <ClCompile Include="src\Core\Time.cpp" />
@@ -29,7 +26,12 @@
     <ClCompile Include="src\Render\OpenGL\VertexBuffer.cpp" />
     <ClCompile Include="src\Render\OpenGL\VertexArrayBuffer.cpp" />
     <ClCompile Include="src\Core\ECS\World.cpp" />
+    <ClCompile Include="src\Core\ECS\Component.cpp" />
+    <ClCompile Include="src\Core\ECS\Entity.cpp" />
     <ClCompile Include="src\Core\ECS\System.cpp" />
+    <ClCompile Include="src\Core\ECS\Systems\Camera2DSystem.cpp" />
+    <ClCompile Include="src\Core\ECS\Systems\SpriteRenderSystem.cpp" />
+    <ClCompile Include="src\Render\RenderSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -42,13 +44,7 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="imgui\misc\freetype\imgui_freetype.h" />
     <ClInclude Include="imgui\misc\stl\imgui_stl.h" />
-    <ClInclude Include="src\Core\ECS\Components\PhysicsBody.h" />
-    <ClInclude Include="src\Core\ECS\Component.h" />
-    <ClInclude Include="src\Core\ECS\Components\Camera2D.h" />
-    <ClInclude Include="src\Core\ECS\Components\MeshRender.h" />
-    <ClInclude Include="src\Core\ECS\Components\Sprite.h" />
     <ClInclude Include="src\Render\OpenGL\IndexBuffer.h" />
-    <ClInclude Include="src\Utility\Debug.h" />
     <ClInclude Include="FireLight.h" />
     <ClInclude Include="GL\gl3w.h" />
     <ClInclude Include="GL\glcorearb.h" />
@@ -56,7 +52,6 @@
     <ClInclude Include="src\Core\SceneManager.h" />
     <ClInclude Include="src\Core\SceneNode.h" />
     <ClInclude Include="src\Render\OpenGL\GLUtility.h" />
-    <ClInclude Include="src\Render\SimpleRenderSystem.h" />
     <ClInclude Include="src\Core\App.h" />
     <ClInclude Include="src\Render\Camera.h" />
     <ClInclude Include="src\Core\Time.h" />
@@ -67,9 +62,16 @@
     <ClInclude Include="src\Utility\Resources\Texture.h" />
     <ClInclude Include="src\Render\OpenGL\VertexBuffer.h" />
     <ClInclude Include="src\Render\OpenGL\VertexArrayBuffer.h" />
+    <ClInclude Include="src\Core\ECS\Component.h" />
     <ClInclude Include="src\Core\ECS\World.h" />
-    <ClInclude Include="src\Core\ECS\Components\Transfrom.h" />
+    <ClInclude Include="src\Core\ECS\Entity.h" />
     <ClInclude Include="src\Core\ECS\System.h" />
+    <ClInclude Include="src\Core\ECS\Components\Camera2D.h" />
+    <ClInclude Include="src\Core\ECS\Components\Sprite.h" />
+    <ClInclude Include="src\Core\ECS\Components\Transform.h" />
+    <ClInclude Include="src\Core\ECS\Systems\Camera2DSystem.h" />
+    <ClInclude Include="src\Core\ECS\Systems\SpriteRenderSystem.h" />
+    <ClInclude Include="src\Render\RenderSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
