--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -26,13 +26,14 @@
     <ClCompile Include="src\Render\OpenGL\VertexBuffer.cpp" />
     <ClCompile Include="src\Render\OpenGL\VertexArrayBuffer.cpp" />
     <ClCompile Include="src\Core\ECS\World.cpp" />
-    <ClCompile Include="src\Core\ECS\Component.cpp" />
     <ClCompile Include="src\Core\ECS\Entity.cpp" />
     <ClCompile Include="src\Core\ECS\System.cpp" />
     <ClCompile Include="src\Core\ECS\Systems\Camera2DSystem.cpp" />
     <ClCompile Include="src\Core\ECS\Systems\SpriteRenderSystem.cpp" />
     <ClCompile Include="src\Render\RenderSystem.cpp" />
     <ClCompile Include="src\Render\RenderBuffer.cpp" />
+    <ClCompile Include="src\Core\ECS\ComponentPool.cpp" />
+    <ClCompile Include="src\Core\ECS\Component.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -63,7 +64,6 @@
     <ClInclude Include="src\Utility\Resources\Texture.h" />
     <ClInclude Include="src\Render\OpenGL\VertexBuffer.h" />
     <ClInclude Include="src\Render\OpenGL\VertexArrayBuffer.h" />
-    <ClInclude Include="src\Core\ECS\Component.h" />
     <ClInclude Include="src\Core\ECS\World.h" />
     <ClInclude Include="src\Core\ECS\Entity.h" />
     <ClInclude Include="src\Core\ECS\System.h" />
@@ -76,6 +76,8 @@
     <ClInclude Include="src\Render\RenderBuffer.h" />
     <ClInclude Include="src\Render\Material.h" />
     <ClInclude Include="src\Core\ECS\Components\MeshRender.h" />
+    <ClInclude Include="src\Core\ECS\ComponentPool.h" />
+    <ClInclude Include="src\Core\ECS\Component.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
