--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -133,6 +133,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="GL\khrplatform.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw.h" />
