--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClCompile Include="src\Render\RenderBuffer.cpp" />
     <ClCompile Include="src\Core\ECS\ComponentPool.cpp" />
     <ClCompile Include="src\Core\ECS\Component.cpp" />
+    <ClCompile Include="src\Core\ECS\Systems\TestSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -79,6 +80,9 @@
     <ClInclude Include="src\Core\ECS\ComponentPool.h" />
     <ClInclude Include="src\Core\ECS\Component.h" />
     <ClInclude Include="GL\khrplatform.h" />
+    <ClInclude Include="src\Core\Input.h" />
+    <ClInclude Include="src\Core\ECS\Components\Test.h" />
+    <ClInclude Include="src\Core\ECS\Systems\TestSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
