--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -19,15 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Systems\Benchmark.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scenes\Test_Scene.cpp" />
-    <ClCompile Include="Scenes\TestSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Systems\Benchmark.h" />
+    <ClInclude Include="Components\Movement.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Scenes\Test_Scene.h" />
-    <ClInclude Include="Scenes\TestSystem.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
